--- a/src/ViewportViewExtension/ViewportViewExtension/Properties/Resources.resx
+++ b/src/ViewportViewExtension/ViewportViewExtension/Properties/Resources.resx
@@ -124,7 +124,13 @@
   <data name="assets_js_three_min_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\assests\js\three.min.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="assets_js_CanvasRenderer_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\assests\js\CanvasRenderer.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="index_html" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\index.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="assets_js_Projector_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\assests\js\Projector.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
